<resources>
    <string name="app_name">mooretoon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appname">MoorToon</string>
    <string name="jadwal">Jadwal</string>
    <string name="genre">Genre</string>
    <string name="sen">SEN</string>
    <string name="sel">SEL</string>
    <string name="rab">RAB</string>
    <string name="kam">KAM</string>
    <string name="jum">JUM</string>
    <string name="min">MIN</string>
    <string name="favorittidakada">Tidak ada Mortoon yang baru dilihat</string>
    <string name="rekomendasi">Rekomendasi</string>
    <string name="semua">Semua</string>
    <string name="baca_ini">Baca Ini!</string>
    <string name="terpopuler_minggu_ini">Terpopuler Minggu Ini</string>
    <string name="jelajahi">Jelajahi</string>
    <string name="deskripsi">Membunuh troll dan menyelamatkan dunia! ikuti tantangan Troll Hunter</string>
    <string name="juduldesk">Two Steps From Hell</string>
    <string name="welcome">WELCOME!</string>
    <string name="for_you">For you</string>
    <string name="original">Original</string>
    <string name="kanvas">Kanvas</string>
    <string name="favoritku">Favoritku</string>
    <string name="more">More</string>
    <string name="yuk_login_dullu_ya">Yuk, Login dullu ya...</string>
    <string name="alamat_email">Alamat Email</string>
    <string name="password">Password</string>
    <string name="appnames">MorToon</string>
</resources>