<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="@drawable/original"
    android:orientation="vertical"
    tools:context=".OriginalFragment">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="90dp">

        <TextView
            android:id="@+id/tvjadwal"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Jadwal"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvgenre"
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:drawableEnd="@drawable/icon_search"
            android:text="@string/genre"
            android:textColor="#5E5D5D"
            android:textSize="15dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_sen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:text="@string/sen"
            android:textColor="#5E5D5D" />

        <TextView
            android:id="@+id/tv_sel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sel"
            android:textColor="#5E5D5D" />

        <TextView
            android:id="@+id/tv_rab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rab"
            android:textColor="#5E5D5D" />

        <TextView
            android:id="@+id/tvkam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/kam"
            android:textColor="#5E5D5D" />

        <TextView
            android:id="@+id/tv_sab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/jum"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/min"
            android:textColor="#5E5D5D" />

    </TableRow>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="131dp"
        android:src="@drawable/cover_gambar" />


</LinearLayout>