<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="@drawable/foryou"
    android:orientation="vertical"
    tools:context=".ForyouFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textStyle="bold" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="221dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="355dp"
            android:layout_height="217dp"
            android:src="@drawable/fantasy" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="17dp"
            android:layout_height="match_parent"
            android:src="@drawable/aksi" />
    </TableRow>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#D3D3D3"
        android:text="@string/juduldesk"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvdeskripsi"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="#D3D3D3"
        android:text="@string/deskripsi"
        android:textColor="#353232" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/jelajahi"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="430dp"
        android:layout_height="169dp"
        android:src="@drawable/cover_utama" />


</LinearLayout>