<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:background="@drawable/login1"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="137dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="168dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/yuk_login_dullu_ya"
            android:textColor="#322D2D"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="327dp"
            android:layout_height="134dp"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/login" />

    </TableRow>

    <EditText
        android:id="@+id/etemail"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:drawableStart="@drawable/icon_email"
        android:foregroundTint="#040303"
        android:hint="@string/alamat_email"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="#676767" />

    <EditText
        android:id="@+id/etpassword"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:drawableStart="@drawable/icon_password"
        android:drawableEnd="@drawable/icon_pass"
        android:foregroundTint="#070707"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="#5A5A5A" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="107dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_dftr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/btn_daftar" />

        <Button
            android:id="@+id/btn_msk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/btn_masuk" />

    </TableRow>

    <TextView
        android:id="@+id/textView2"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Lupa Kata Sandi?"
        android:textColor="#5E5D5D"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:gravity="center"
        android:text="Ayo Masuk Sekarang!"
        android:textColor="#5E5D5D"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/medsos" />


</LinearLayout>